# CodeInsight

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: main.py  schemas.py
configs/: models.yaml  rules.yaml  settings.yaml
core/: __init__.py
core/context/: __init__.py  builder.py
core/github/: __init__.py  diff.py  webhook.py
core/parser/: __init__.py  diff.py  python_ast.py  repository.py
core/policy/: __init__.py  config.py  engine.py
core/review/: __init__.py  service.py
docs/: 01_Architecture.md  10_Zero_To_One_Vibe_Coding_Project_Guide.md  11_Positioning_And_Tool_Comparison.md  12_Agent_LLM_Review_Rules.md  13_Development_Handoff.md
tests/: test_api.py  test_context.py  test_github_diff.py  test_github_webhook.py  test_parser.py  test_policy_engine.py
